--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "leaflet": "^1.7.1",
     "postcss": "^7",
+    "sass": "^1.49.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
@@ -27,7 +28,6 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
-    "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
     "vue-cli-plugin-tailwind": "~2.2.18"
   }
